(Dyntopo) Snake hook sculpt brush slips off and affects the part of the mesh behind #56497

Closed
opened 2018-08-22 13:54:33 +02:00 by Yegor · 14 comments

System Information
Debian testing, Nvidia GTX 1080ti

Blender Version
Broken: latest nightly build
Worked: 2.79b

Short description of error
When you draw with the snake hook brush (pinch=1, rake=1), the brush slips off the current extrusion and starts to affect the mesh behind, if it is something behind the brush.

Exact steps for others to reproduce the error

  • Open the attached file
  • Switch to sculpt dyntopo mode, choose the snake hook brush
  • Position camera the way, that you have some part of the mesh behind the spot you are going to extrude of and draw an extrusion

On the attached image i drew an extrusion without releasing the mouse button and got three separate strokes

snakehook.png

blender_snakehook_bug.blend

**System Information** Debian testing, Nvidia GTX 1080ti **Blender Version** Broken: latest nightly build Worked: 2.79b **Short description of error** When you draw with the snake hook brush (pinch=1, rake=1), the brush slips off the current extrusion and starts to affect the mesh behind, if it is something behind the brush. **Exact steps for others to reproduce the error** - Open the attached file - Switch to sculpt dyntopo mode, choose the snake hook brush - Position camera the way, that you have some part of the mesh behind the spot you are going to extrude of and draw an extrusion On the attached image i drew an extrusion without releasing the mouse button and got three separate strokes ![snakehook.png](https://archive.blender.org/developer/F4337700/snakehook.png) [blender_snakehook_bug.blend](https://archive.blender.org/developer/F4337701/blender_snakehook_bug.blend)
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed, also affects 2.8… Not sure whether this is actually a bug, or a limitation of current code though…

Confirmed, also affects 2.8… Not sure whether this is actually a bug, or a limitation of current code though…

Added subscriber: @Reoxur

Added subscriber: @Reoxur

Is this the issue with the Snake Hook slipping instead of holding onto the mesh?

B 2.79 - Snake hook works as expected.

Snake Hook Brush 2.79 2019-08-19_12-23-37.mp4

B 2.8 Release - Snake Hook slips and doesn't hold on anymore.

Snake Hook brush 2.80 2019-08-19_12-24-40.mp4

blender-2.81.0-git.10001d909905-windows64 - Snake Hook still has the issue

Snake Hook brush 2.81 2019-08-19_12-25-57.mp4

Is this the issue with the Snake Hook slipping instead of holding onto the mesh? **B 2.79 - Snake hook works as expected.** [Snake Hook Brush 2.79 2019-08-19_12-23-37.mp4](https://archive.blender.org/developer/F7672856/Snake_Hook_Brush_2.79__2019-08-19_12-23-37.mp4) **B 2.8 Release - Snake Hook slips and doesn't hold on anymore.** [Snake Hook brush 2.80 2019-08-19_12-24-40.mp4](https://archive.blender.org/developer/F7672858/Snake_Hook_brush_2.80_2019-08-19_12-24-40.mp4) **blender-2.81.0-git.10001d909905-windows64 - Snake Hook still has the issue** [Snake Hook brush 2.81 2019-08-19_12-25-57.mp4](https://archive.blender.org/developer/F7672860/Snake_Hook_brush_2.81__2019-08-19_12-25-57.mp4)
Author

In #56497#755786, @Reoxur wrote:
Is this the issue with the Snake Hook slipping instead of holding onto the mesh?

B 2.79 - Snake hook works as expected.

Snake Hook Brush 2.79 2019-08-19_12-23-37.mp4

B 2.8 Release - Snake Hook slips and doesn't hold on anymore.

Snake Hook brush 2.80 2019-08-19_12-24-40.mp4

blender-2.81.0-git.10001d909905-windows64 - Snake Hook still has the issue

Snake Hook brush 2.81 2019-08-19_12-25-57.mp4

Yes

> In #56497#755786, @Reoxur wrote: > Is this the issue with the Snake Hook slipping instead of holding onto the mesh? > > **B 2.79 - Snake hook works as expected.** > > [Snake Hook Brush 2.79 2019-08-19_12-23-37.mp4](https://archive.blender.org/developer/F7672856/Snake_Hook_Brush_2.79__2019-08-19_12-23-37.mp4) > > **B 2.8 Release - Snake Hook slips and doesn't hold on anymore.** > > [Snake Hook brush 2.80 2019-08-19_12-24-40.mp4](https://archive.blender.org/developer/F7672858/Snake_Hook_brush_2.80_2019-08-19_12-24-40.mp4) > > **blender-2.81.0-git.10001d909905-windows64 - Snake Hook still has the issue** > > [Snake Hook brush 2.81 2019-08-19_12-25-57.mp4](https://archive.blender.org/developer/F7672860/Snake_Hook_brush_2.81__2019-08-19_12-25-57.mp4) Yes

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro

@PabloDobarro This effects your Branch too.

@PabloDobarro This effects your Branch too.

This comment was removed by @Reoxur

*This comment was removed by @Reoxur*

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

I can confirm this bug. (blender-2.81-c43018cdc01e-windows64)

I can confirm this bug. (blender-2.81-c43018cdc01e-windows64)

This issue was referenced by 9df9fb3324

This issue was referenced by 9df9fb33244889c37b9bfd5ef938c96f27144fee
Member

Fixed in 9df9fb3324

Fixed in 9df9fb3324
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Pablo Dobarro self-assigned this 2019-10-07 22:07:02 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56497
No description provided.