Fix T56497: Snake hook sculpt brush slips off and affects the part of the mesh behind

We should not be updating the cache true location there.
This commit also fixes the snake hook default alpha.

Reviewed By: brecht

Maniphest Tasks: T56497

Differential Revision: https://developer.blender.org/D5915